--- a/.github/workflows/abiword-CI.yml
+++ b/.github/workflows/abiword-CI.yml
@@ -26,7 +26,7 @@ jobs:
     - uses: rickstaa/action-create-tag@v1
       id: "tag_create"
       with:
-        tag: "continuous-virtualbox"
+        tag: "continuous-abiword"
 
     - uses: softprops/action-gh-release@v1
       with:
