--- a/.github/workflows/utils.yml
+++ b/.github/workflows/utils.yml
@@ -2,7 +2,7 @@ name: Utils CI
 
 on:
   schedule:
-    - cron:  '0 0 * * 1'
+    - cron:  '0 0 1 * *'
   push:
     paths:
       - 'create-utils.sh'
@@ -25,7 +25,7 @@ jobs:
                  zstd libarchive libunwind google-glog gtest fmt gflags \
                  double-conversion cmake ruby-ronn libevent libdwarf git \
                  clang libsodium liburing libaio musl kernel-headers-musl utf8cpp \
-                 chrono-date python python-mistletoe range-v3
+                 chrono-date python python-mistletoe range-v3 nlohmann-json
           build_dwarfs=false ./create-utils.sh
           tar xf utils.tar.gz
           mv utils utils-bak
