--- a/.github/workflows/utils.yml
+++ b/.github/workflows/utils.yml
@@ -1,58 +1,81 @@
 name: Utils CI
+concurrency:
+  group: build-${{ github.ref }}
+  cancel-in-progress: true
 
 on:
   schedule:
-    - cron:  '0 0 1 * *'
-  push:
-    paths:
-      - 'create-utils.sh'
+    - cron:  '0 12 1 * *'
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     container: archlinux:latest
-
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Compile utils
-        run: |
-          chmod +x create-utils.sh
-          pacman -Syu --noconfirm --needed base-devel gawk grep lz4 zstd \
+    - name: build
+      if: always()
+      run: |
+        chmod +x create-utils.sh
+        pacman -Syu --noconfirm --needed base-devel gawk grep lz4 zstd \
                  curl gcc make autoconf libtool pkgconf libcap fuse2 lzo \
                  xz zlib findutils openssl jemalloc xxhash boost lz4 xz \
                  zstd libarchive libunwind google-glog gtest fmt gflags \
                  double-conversion cmake ruby-ronn libevent libdwarf git \
                  clang libsodium liburing libaio musl kernel-headers-musl utf8cpp \
                  chrono-date python python-mistletoe range-v3 nlohmann-json
-          build_dwarfs=false ./create-utils.sh
-          tar xf utils.tar.gz
-          mv utils utils-bak
-          pacman -Rdd --noconfirm fuse2
-          pacman -S --noconfirm fuse3
-          build_dwarfs=false ./create-utils.sh
-          tar xf utils.tar.gz
-          rm utils.tar.gz
-          mv utils-bak/* utils
-          tar -zcf utils.tar.gz utils
-          rm -rf utils utils-bak
+        build_dwarfs=false ./create-utils.sh
+        tar xf utils.tar.gz
+        mv utils utils-bak
+        pacman -Rdd --noconfirm fuse2
+        pacman -S --noconfirm fuse3
+        build_dwarfs=false ./create-utils.sh
+        tar xf utils.tar.gz
+        rm utils.tar.gz
+        mv utils-bak/* utils
+        tar -zcf utils.tar.gz utils
+        rm -rf utils utils-bak
 
-          build_dwarfs=true ./create-utils.sh
-          tar xf utils_dwarfs.tar.gz
-          rm utils_dwarfs.tar.gz
-          mv utils utils-bak
-          pacman -Rdd --noconfirm fuse3
-          pacman -S --noconfirm fuse2
-          build_dwarfs=true ./create-utils.sh
-          tar xf utils_dwarfs.tar.gz
-          rm utils_dwarfs.tar.gz
-          mv utils-bak/* utils
-          tar -zcf utils_dwarfs.tar.gz utils
+        build_dwarfs=true ./create-utils.sh
+        tar xf utils_dwarfs.tar.gz
+        rm utils_dwarfs.tar.gz
+        mv utils utils-bak
+        pacman -Rdd --noconfirm fuse3
+        pacman -S --noconfirm fuse2
+        build_dwarfs=true ./create-utils.sh
+        tar xf utils_dwarfs.tar.gz
+        rm utils_dwarfs.tar.gz
+        mv utils-bak/* utils
+        tar -zcf utils_dwarfs.tar.gz utils
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: Utils
-          path: |
-            utils.tar.gz
-            utils_dwarfs.tar.gz
+        mkdir dist
+        mv ./*.tar.gz dist/
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4.4.0
+      with:
+        name: Utils
+        path: 'dist'
+        
+  release:
+      needs: [build]
+      permissions: write-all
+      runs-on: ubuntu-latest
+
+      steps:
+        - uses: actions/download-artifact@v4.1.8
+          with:
+            name: Utils
+
+        - name: release
+          uses: marvinpinto/action-automatic-releases@latest
+          with:
+            title: Utils
+            automatic_release_tag: utils
+            prerelease: true
+            draft: false
+            files: |
+              utils_dwarfs.tar.gz
+            repo_token: ${{ secrets.GITHUB_TOKEN }}
